welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:3: error: 'case' expected but '(' found.
    (true;true) => return true ;
    ^monkeyTrouble:3: error: '}' expected but ';' found.
    (true;true) => return true ;
                               ^monkeyTrouble:4: error: ')' expected but ';' found.
    (false;false) => return true ;
          ^monkeyTrouble:4: error: ';' expected but ')' found.
    (false;false) => return true ;
                ^monkeyTrouble:5: error: ';' expected but ')' found.
    (_;_) => return false ;
        ^monkeyTrouble:7: error: eof expected but '}' found.
 }
 ^