welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
  (aSmile, bSmile) match {
    (true;true) => return true ;
    (false;false) => return true ;
    (_;_) => return false ;
  }}